// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom operations async async 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($value: String) {
      asyncAsync(value: $value) {success}
    }
  ",
      "variables": {
        "value": "hello, world!",
      },
    },
    {},
  ],
]
`;

exports[`custom operations async sync 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($value: String) {
      asyncSync(value: $value) {result}
    }
  ",
      "variables": {
        "value": "hello, world!",
      },
    },
    {},
  ],
]
`;

exports[`custom operations client operations with custom types and refs client can call custom mutation with custom type argument 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    mutation($customArg: ID) {
      mutateWithCustomTypeArg(customArg: $customArg) 
    }
  ",
      "variables": {
        "customArg": {},
      },
    },
    {},
  ],
]
`;

exports[`custom operations client operations with custom types and refs client can call custom mutation with ref argument 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    mutation($refArg: ID) {
      mutationWithRefArg(refArg: $refArg) 
    }
  ",
      "variables": {
        "refArg": {},
      },
    },
    {},
  ],
]
`;

exports[`custom operations client operations with custom types and refs client can call custom query with custom type argument 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($customArg: ID) {
      queryWithCustomTypeArg(customArg: $customArg) 
    }
  ",
      "variables": {
        "customArg": {},
      },
    },
    {},
  ],
]
`;

exports[`custom operations client operations with custom types and refs client can call custom query with ref argument 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($refArg: ID) {
      queryWithRefArg(refArg: $refArg) 
    }
  ",
      "variables": {
        "refArg": {},
      },
    },
    {},
  ],
]
`;

exports[`custom operations custom type array result 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($value: String) {
      multiEcho(value: $value) {result}
    }
  ",
      "variables": {
        "value": "something",
      },
    },
    {},
  ],
]
`;

exports[`custom operations custom type result 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($value: String) {
      echoWithCustomType(value: $value) {result}
    }
  ",
      "variables": {
        "value": "something",
      },
    },
    {},
  ],
]
`;

exports[`custom operations model array result 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($phoneNumbers: [String]) {
      checkBatchOfPhoneNumbersForActiveUsers(phoneNumbers: $phoneNumbers) {phoneNumber createdAt updatedAt}
    }
  ",
      "variables": {
        "phoneNumbers": [
          "123",
          "123",
        ],
      },
    },
    {},
  ],
]
`;

exports[`custom operations model result 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($query: String) {
      findJustOnePhoneNumber(query: $query) {phoneNumber createdAt updatedAt}
    }
  ",
      "variables": {
        "query": "something",
      },
    },
    {},
  ],
]
`;

exports[`custom operations primitive type result 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($value: String) {
      echo(value: $value) 
    }
  ",
      "variables": {
        "value": "something",
      },
    },
    {},
  ],
]
`;

exports[`custom operations solo async handler 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($value: String) {
      soloAsync(value: $value) {success}
    }
  ",
      "variables": {
        "value": "hello, world!",
      },
    },
    {},
  ],
]
`;

exports[`custom operations sync async 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($value: String) {
      syncAsync(value: $value) {success}
    }
  ",
      "variables": {
        "value": "hello, world!",
      },
    },
    {},
  ],
]
`;

exports[`custom operations sync sync 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($value: String) {
      syncSync(value: $value) {result}
    }
  ",
      "variables": {
        "value": "hello, world!",
      },
    },
    {},
  ],
]
`;

exports[`custom operations with enum arguments can be called with valid enum values 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "
    query($status: EchoEnumStatus) {
      echoEnum(status: $status) 
    }
  ",
      "variables": {
        "status": "Active",
      },
    },
    {},
  ],
]
`;
